--- a/package/Config.in
+++ b/package/Config.in
@@ -978,6 +978,7 @@ endif
 source "package/systemd/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 source "package/sysvinit/Config.in"
+source "package/runit/Config.in"
 endif
 source "package/util-linux/Config.in"
 endmenu
