--- a/package/Config.in
+++ b/package/Config.in
@@ -808,6 +808,7 @@ source "package/iperf/Config.in"
 source "package/iproute2/Config.in"
 source "package/ipsec-tools/Config.in"
 source "package/ipset/Config.in"
+source "package/ipsvd/Config.in"
 source "package/iptables/Config.in"
 source "package/iputils/Config.in"
 source "package/iw/Config.in"
