--- a/package/Config.in
+++ b/package/Config.in
@@ -131,6 +131,7 @@ source "package/yasm/Config.in"
 endmenu
 
 menu "Filesystem and flash utilities"
+source "package/archivemount/Config.in"
 source "package/cifs-utils/Config.in"
 source "package/cramfs/Config.in"
 source "package/curlftpfs/Config.in"
