--- a/board/elebihan/demo-misc/x86/linux-3.10.config
+++ b/board/elebihan/demo-misc/x86/linux-3.10.config
@@ -25,6 +25,7 @@ CONFIG_IP_PNP=y
 # CONFIG_INET_DIAG is not set
 CONFIG_IPV6=y
 # CONFIG_WIRELESS is not set
+CONFIG_UEVENT_HELPER_PATH="/sbin/mdev"
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
@@ -69,6 +70,8 @@ CONFIG_EXT2_FS=y
 # CONFIG_DNOTIFY is not set
 CONFIG_FANOTIFY=y
 CONFIG_AUTOFS4_FS=y
+CONFIG_FUSE_FS=y
+CONFIG_CUSE=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 # CONFIG_MISC_FILESYSTEMS is not set
