--- a/configs/elebihan_demo_misc_x86_defconfig
+++ b/configs/elebihan_demo_misc_x86_defconfig
@@ -18,6 +18,9 @@ BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.10.7"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/elebihan/demo-misc/x86/linux-3.10.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
+BR2_PACKAGE_STRACE=y
+BR2_PACKAGE_ARCHIVEMOUNT=y
+BR2_PACKAGE_ZLIB=y
 BR2_PACKAGE_DHCPCD=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_TARGET_ROOTFS_EXT2=y
