--- a/package/Config.in
+++ b/package/Config.in
@@ -403,6 +403,7 @@ source "package/python-configobj/Config.in"
 source "package/python-crc16/Config.in"
 source "package/python-dialog/Config.in"
 source "package/python-dpkt/Config.in"
+source "package/python-gobject/Config.in"
 source "package/python-id3/Config.in"
 source "package/python-ipy/Config.in"
 source "package/python-json-schema-validator/Config.in"
