python-pygobject: new package.
python-pygobject provides Python bindings for GLib, GObject and GIO.

This is the old version of the bindings, used by PyGtk and *not* the
new version which relies on gobject-introspection.

--- a/package/Config.in
+++ b/package/Config.in
@@ -417,6 +417,7 @@ source "package/python-protobuf/Config.in"
 source "package/python-pyasn/Config.in"
 source "package/python-pycrypto/Config.in"
 source "package/python-pygame/Config.in"
+source "package/python-pygobject/Config.in"
 source "package/python-pyparsing/Config.in"
 source "package/python-pyro/Config.in"
 source "package/python-pysnmp/Config.in"
