--- a/package/Config.in
+++ b/package/Config.in
@@ -431,6 +431,7 @@ source "package/python-simplejson/Config.in"
 source "package/python-thrift/Config.in"
 source "package/python-tornado/Config.in"
 source "package/python-versiontools/Config.in"
+source "package/python-xpyb/Config.in"
 endmenu
 endif
 source "package/python3/Config.in"
