--- a/package/Config.in
+++ b/package/Config.in
@@ -415,6 +415,7 @@ source "package/python-nfc/Config.in"
 source "package/python-posix-ipc/Config.in"
 source "package/python-protobuf/Config.in"
 source "package/python-pyasn/Config.in"
+source "package/python-pycairo/Config.in"
 source "package/python-pycrypto/Config.in"
 source "package/python-pygame/Config.in"
 source "package/python-pygobject/Config.in"
