xgxperf: new package.
xgxperf is a UI performance templates for Qt5.

Some documentation about the original version for Qt4 is available at
http://processors.wiki.ti.com/index.php/Xgxperf.

--- a/package/Config.in
+++ b/package/Config.in
@@ -221,6 +221,7 @@ endif
 
 	source "package/qt5/Config.in"
 	source "package/weston/Config.in"
+	source "package/xgxperf/Config.in"
 	source "package/x11r7/Config.in"
 
 comment "X applications"
