clutter: new package.
Clutter is an open source software library for creating fast,
compelling, portable, and dynamic graphical user interfaces.

It depends on cogl and has support for X11, Wayland.

--- a/package/Config.in
+++ b/package/Config.in
@@ -590,6 +590,7 @@ endmenu
 menu "Graphics"
 	source "package/atk/Config.in"
 	source "package/cairo/Config.in"
+	source "package/clutter/Config.in"
 	source "package/cogl/Config.in"
 	source "package/fltk/Config.in"
 	source "package/fontconfig/Config.in"
