--- a/package/Config.in
+++ b/package/Config.in
@@ -1088,6 +1088,7 @@ source "package/coreutils/Config.in"
 endif
 source "package/cpuload/Config.in"
 source "package/dsp-tools/Config.in"
+source "package/gradm/Config.in"
 source "package/htop/Config.in"
 source "package/iprutils/Config.in"
 source "package/keyutils/Config.in"
