nsd: new package
This package provides NSD, an authoritative only, high performance,
simple and open source name server.

--- a/package/Config.in
+++ b/package/Config.in
@@ -1030,6 +1030,7 @@ endif
 	source "package/ngrep/Config.in"
 	source "package/nmap/Config.in"
 	source "package/noip/Config.in"
+	source "package/nsd/Config.in"
 	source "package/ntp/Config.in"
 	source "package/nuttcp/Config.in"
 	source "package/odhcploc/Config.in"
